fixup! squash! Bug 27476: Implement about:torconnect captive portal within Tor Browser
Reworked how the UI states are managed and shown.
Also, the UI state is saved to TorConnect, so that reloading the page or
opening it in another tab/window shows the same state.
Syncrhonize the breadcrumb and location changes.

--- a/browser/components/torconnect/content/aboutTorConnect.css
+++ b/browser/components/torconnect/content/aboutTorConnect.css
@@ -274,7 +274,7 @@ body {
   fill: var(--onion-color);
 }
 
-.title.assit {
+.title.offline, .title.assit, .title.final {
   background-image: url("chrome://browser/content/torconnect/connection-failure.svg");
 }
 
